<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="activity.ctec.aboutme.SwimmingAndShows">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextButton"
        android:id="@+id/nextPage2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AboutMe"
        android:id="@+id/swimmingButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AboutMe"
        android:id="@+id/movieButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/swimmingButton"
        android:layout_alignEnd="@+id/swimmingButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/swimmingtext"
        android:id="@+id/swimmingText"
        android:layout_below="@+id/swimmingButton"
        android:layout_alignRight="@+id/swimmingButton"
        android:layout_alignEnd="@+id/swimmingButton"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movietext"
        android:id="@+id/movieText"
        android:layout_below="@+id/movieButton"
        android:layout_alignRight="@+id/movieButton"
        android:layout_alignEnd="@+id/movieButton"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swimmingPic"
        android:src="@drawable/swimmingaboutmeapp"
        android:layout_above="@+id/movieButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/swimmingText"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moviePic"
        android:layout_alignTop="@+id/nextPage2"
        android:src="@drawable/tvshowsaboutme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

</RelativeLayout>
